fixed enemy tile substitution and function is player around

--- a/documentacion/todo.txt
+++ b/documentacion/todo.txt
@@ -6,6 +6,6 @@
 
 
 //TODO PARA PRIMER PROTOTYPE
-1- Que desaparezca las tiles donde empiezan los personajes
+1- Que desaparezca las tiles donde empiezan los personajes #DONE
 2- Ataque de los npcs al jugador
 3- Winning condition 
