added enemy attacks

--- a/documentacion/todo.txt
+++ b/documentacion/todo.txt
@@ -6,6 +6,6 @@
 
 //TODO PARA PRIMER PROTOTYPE
 1- Que desaparezca las tiles donde empiezan los personajes #DONE
-2- Ataque de los npcs al jugador
-3- Winning condition 
+2- Ataque de los npcs al jugador #DONE
+3- Winning condition #LOGIC DONE, ADD ACTIONS KILLING
 4 - Cambiar logica de enseñar texto, debe haber un buffer de texto que se flushee al final del turno. #DONE
