Added game properties

--- a/documentacion/todo.txt
+++ b/documentacion/todo.txt
@@ -1,12 +1,7 @@
 3- Editor de objetos #DONE, add take machanic #DONE, add use mechanic, add equip mechanic
-4- Conexion entre mapas #DONE
-6 - Add tile color
-7 - Add doors (?)
-9 - Add inventory
 10 - stilizar game.html
-11- Añaadir game properties -> gamename, initial map, initial player pos
-12- añadir escaleras (transporte a otro mapa y coordenadas)
 13- Remover ALT, caps lock e indeseadas del mapa.
 14- Comporbar que tile existe para añadir en el mapa
 15- Solo añadir tile si se esta centrado en el mapa
 16- añadir scripting
+17- añadir menu superior con links a Documentacion, Juego
